--- a/app-loyal/src/app/app.component.html
+++ b/app-loyal/src/app/app.component.html
@@ -14,34 +14,14 @@
   </h3>
   <app-login></app-login>
 </div>
+
 <ng-template #ElseMostrarLogin>
-    Else de mostrar Login
+  <p>Bloque else de mostrarLogin</p>
 </ng-template>
-<button (click) = "mostrarLogin = !mostrarLogin">
-  cambiar mostrar login
+<button (click)="mostrarLogin = !mostrarLogin">
+  Cambiar Mostar Login
 </button>
-
-<h3>Ng switch</h3>
-
-<section>
-  <div ngSwitch="edad">
-    <div *ngSwitchCase="1">
-      edad es 1
-    </div>
-    <div *ngSwitchCase="2">
-      edad es 2
-    </div>
-    <div *ngSwitchCase="3">
-      edad es 3
-    </div>
-  </div>
-
-</section>
-
-
-
-
-
+<br>
 <div>
   <h4>Nombres:</h4>
   <ul>
@@ -60,6 +40,35 @@
   Cambiar Clase
 </button>
 <hr>
+<h3>Ng switch</h3>
+<section>
+  <div [ngSwitch]="edad">
+    <div *ngSwitchCase="1">
+      Edad es 1
+    </div>
+    <div *ngSwitchCase="2">
+      Edad es 2
+    </div>
+    <div *ngSwitchCase="3">
+      Edad es 3
+    </div>
+  </div>
+  <br>
+  <div [ngSwitch]="getEdad()">
+    <div *ngSwitchCase="1">
+      Edad es 1
+    </div>
+    <div *ngSwitchCase="2">
+      Edad es 2
+    </div>
+    <div *ngSwitchCase="3">
+      Edad es 3
+    </div>
+  </div>
+</section>
 -->
+
+<!--incluyo app-dashboard-->
 <app-dashboard></app-dashboard>
+
 <router-outlet></router-outlet>
