--- a/app-loyal/src/app/dashboard/dashboard.component.html
+++ b/app-loyal/src/app/dashboard/dashboard.component.html
@@ -25,30 +25,36 @@
                           class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
               </div>
 
+              <!--formularios-->
+              <!-- Content Row -->
+              <div class="row">
+                <div class="col-6">
+                  <app-template-driven></app-template-driven>
+                </div>
+                <div class="col-6">
+                  <app-reactive-form></app-reactive-form>
+                </div>
+              </div>
+
               <!-- Content Row -->
               <div class="row">
                 <div class="col-sm-12 col-lg-6">
                   <app-saldo></app-saldo>
                 </div>
-
                 <div class="col-sm-12 col-lg-6">
                   <app-datos-equipo></app-datos-equipo>
                 </div>
               </div>
 
+              <!-- Content Row -->
               <div class="row">
                 <div class="col-sm-12 col-lg-8">
                   <app-contacto-cliente></app-contacto-cliente>
                 </div>
-
                 <div class="col-sm-12 col-lg-4">
                   <app-recomendaciones></app-recomendaciones>
                 </div>
               </div>
-
-
-
-
           </div>
           <!-- /.container-fluid -->
 
@@ -57,3 +63,35 @@
 
       <!-- Footer -->
       <app-footer></app-footer>
+      <!-- End of Footer -->
+
+  </div>
+  <!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+  <i class="fas fa-angle-up"></i>
+</a>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">×</span>
+              </button>
+          </div>
+          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+          <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+              <a class="btn btn-primary" href="login.html">Logout</a>
+          </div>
+      </div>
+  </div>
+</div>
